--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+				<li><a href="mailto:t.bacher@posteo.de">email</a></li>
+        			<li><a href="https://github.com/TabeaBacher">github.com/TabeaBacher</a></li>
 				</ul>
 			</footer>
 		</body>
