--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,15 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+.blurbmitbild{
+    display: inline-flex;
+}
+img{
+    display: inline-flex;
+    width: 450px;
+    height: fit-content;
+    text-align: right;
+    margin-left: 60px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
